--- a/initramfs/init.rc
+++ b/initramfs/init.rc
@@ -1,8 +1,10 @@
+# ===============================================================================
 on early-init
     # maximum logging
     write /proc/sys/kernel/printk 9 4 1 7
     start ueventd
 
+# ===============================================================================
 on init
 
 sysclktz 0
@@ -18,15 +20,13 @@ loglevel 9
     export ANDROID_ASSETS /system/app
     export ANDROID_DATA /data
     export EXTERNAL_STORAGE /mnt/sdcard
-    export PHONE_STORAGE /mnt/emmc
     export ASEC_MOUNTPOINT /mnt/asec
-    export LOOP_MOUNTPOINT /mnt/obb
     export SD_EXT_DIRECTORY /sd-ext
     export BOOTCLASSPATH /system/framework/core.jar:/system/framework/bouncycastle.jar:/system/framework/ext.jar:/system/framework/framework.jar:/system/framework/android.policy.jar:/system/framework/services.jar:/system/framework/core-junit.jar
+    export LOOP_MOUNTPOINT /mnt/obb 
     export TMPDIR /data/local/tmp
     export TERMINFO /system/etc/terminfo
 
-    # kernel modules
     insmod /lib/modules/vibrator.ko
     insmod /lib/modules/fsr.ko
     insmod /lib/modules/fsr_stl.ko
@@ -34,11 +34,10 @@ loglevel 9
     insmod /lib/modules/rfs_fat.ko
     insmod /lib/modules/storage.ko
 
-# Backward compatibility
+# Backwards Compat - XXX: Going away in G*
+    symlink /system/etc /etc
+    symlink /mnt/sdcard /sdcard
     symlink /sys/kernel/debug /d
-
-# Interface for Wifi
-    setprop wifi.interface "eth0"
 
 # Right now vendor lives on the same filesystem as system,
 # but someday that may change.
@@ -47,24 +46,13 @@ loglevel 9
 # create mountpoints
     mkdir /mnt 0775 root system
     mkdir /mnt/sdcard 0000 system system
-    mkdir /mnt/emmc 0000 system system
 
 # Create cgroup mount point for cpu accounting
     mkdir /acct
     mount cgroup none /acct cpuacct
     mkdir /acct/uid
-    mkdir /system
-    mkdir /data 0771 system system
-    mkdir /dbdata 0771 system system
-    mkdir /cache 0771 system cache
-    mkdir /config 0500 root root
 
-# parameter block
-# LFS
-    mkdir /mnt/.lfs 0755 root root
-    insmod /lib/modules/j4fs.ko
-    mount j4fs /dev/block/stl6 /mnt/.lfs
-    insmod /lib/modules/param.ko
+    mkdir /config 0500 root root
 
     # Directory for putting things only root should see.
     mkdir /mnt/secure 0700 root root
@@ -113,11 +101,164 @@ loglevel 9
     # 5.0 %
     write /dev/cpuctl/bg_non_interactive/cpu.shares 52
 
+# change permissions on vmallocinfo so we can grab it from bugreports
+    chown root log /proc/vmallocinfo
+    chmod 0440 /proc/vmallocinfo
+
+# change permissions on kmsg & sysrq-trigger so bugreports can grab kthread stacks
+    chown root system /proc/kmsg
+    chmod 0440 /proc/kmsg
+    chown root system /proc/sysrq-trigger
+    chmod 0220 /proc/sysrq-trigger
+
+    chown gps root /sys/class/sec/gps/GPS_PWR_EN/value
+    chmod 660 /sys/class/sec/gps/GPS_PWR_EN/value
+    chown gps root /sys/class/sec/gps/GPS_nRST/value
+    chmod 660 /sys/class/sec/gps/GPS_nRST/value
+
+    chmod 0662 /dev/log/radio
+    chmod 0662 /dev/log/main
+    chmod 0662 /dev/log/event
+
+    # allow net_raw to have access to /dev/socket directory
+    chown root net_raw /dev/socket
+    chmod 0775 /dev/socket
+
+# ===============================================================================
+on early-fs
+# LFS
+    insmod /lib/modules/j4fs.ko
+    mkdir /mnt/.lfs 0755 root root
+
+# SYSTEM
+    mkdir /system
+
+# DATA
+    mkdir /data 0771 system system
+
+# DBDATA
+    mkdir /dbdata 0771 system system
+
+# CACHE
+    mkdir /cache 0771 system cache
+
+# ===============================================================================
 on fs
-# mount mtd partitions
-    # Mount /system rw first to give the filesystem a chance to save a checkpoint
+# LFS
+    mount j4fs /dev/block/stl6 /mnt/.lfs
+
+# SYSTEM
     mount ext4 /dev/block/stl9 /system wait nodev noatime nodiratime noauto_da_alloc
 
+# DATA
+    mount ext4 /dev/block/mmcblk0p2 /data  wait nosuid nodev noatime nodiratime noauto_da_alloc
+
+# DBDATA
+    mount ext4 /dev/block/stl10 /dbdata  wait nosuid nodev noatime nodiratime noauto_da_alloc
+
+# CACHE (in device init.rc)
+
+# ===============================================================================
+on post-fs
+# LFS we can load param.ko after lfs was mounted
+    insmod /lib/modules/param.ko
+
+# SYSTEM
+    # now we can load non crucial modules and ones from the system partition
+    insmod /lib/modules/ansi_cprng.ko
+    insmod /lib/modules/bthid.ko
+    insmod /lib/modules/scsi_wait_scan.ko
+    insmod /system/lib/modules/2.6.35.7/cifs.ko
+    insmod /system/lib/modules/2.6.35.7/hotspot_event_monitoring.ko
+
+# DATA
+    chown system system /data
+    chmod 0771 /data
+
+    mkdir /data/lost+found 0770
+    chown root root /data/lost+found
+    chmod 0770 /data/lost+found
+
+    mkdir /data/dontpanic
+    chown root log /data/dontpanic
+    chmod 0750 /data/dontpanic
+
+    # Collect apanic data, free resources and re-arm trigger
+    copy /proc/apanic_console /data/dontpanic/apanic_console
+    chown root log /data/dontpanic/apanic_console
+    chmod 0640 /data/dontpanic/apanic_console
+
+    copy /proc/apanic_threads /data/dontpanic/apanic_threads
+    chown root log /data/dontpanic/apanic_threads
+    chmod 0640 /data/dontpanic/apanic_threads
+
+    write /proc/apanic_console 1
+
+    # create dalvik-cache and double-check the perms
+    mkdir /data/dalvik-cache 0771 system system
+    chown system system /data/dalvik-cache
+    chmod 0771 /data/dalvik-cache
+
+    # create basic filesystem structure
+    mkdir /data/misc 01771 system misc
+    mkdir /data/misc/bluetoothd 0770 bluetooth bluetooth
+    mkdir /data/misc/bluetooth 0770 system system
+    mkdir /data/misc/keystore 0700 keystore keystore
+    mkdir /data/misc/vpn 0770 system system
+    mkdir /data/misc/systemkeys 0700 system system
+    mkdir /data/misc/vpn/profiles 0770 system system
+    mkdir /data/misc/radio 0771 radio radio
+    mkdir /data/gps 700 gps system
+    chown gps system /data/gps
+
+    mkdir /data/misc/wifi 0770 wifi wifi
+    chmod 0770 /data/misc/wifi
+    mkdir /data/misc/wifi/sockets 0770 wifi wifi
+    chmod 0660 /data/misc/wifi/wpa_supplicant.conf
+
+    mkdir /data/misc/dhcp 0770 dhcp dhcp
+    mkdir /data/wifi 0770 wifi wifi
+    mkdir /data/local 0771 shell shell
+    mkdir /data/local/tmp 0771 shell shell
+    mkdir /data/data 0771 system system
+    mkdir /data/app-private 0771 system system
+    mkdir /data/app 0771 system system
+    mkdir /data/property 0700 root root
+
+    # create log system 
+    mkdir /data/log 0777 root root
+    chmod 0777 /data/log
+    chmod 0777 /data/anr
+
+# DBDATA
+    chown system system /dbdata
+    chmod 0771 /dbdata
+    mkdir /dbdata/databases
+    chown system system /dbdata/databases
+    chmod 0777 /dbdata/databases
+    mkdir /dbdata/system
+    chown system system /dbdata/system
+    chmod 0775 /dbdata/system
+
+# CACHE
+    chown system cache /cache
+    chmod 0771 /cache
+
+    mkdir /cache/lost+found 0770
+    chown root root /cache/lost+found
+    chmod 0770 /cache/lost+found
+
+    # This may have been created by the recovery system with odd permissions
+    chown system cache /cache/recovery
+    chmod 0770 /cache/recovery
+
+    # create system dalvik cache, it is unused anyway
+    mkdir /cache/dalvik-cache 0771 system system
+    chown system system /cache/dalvik-cache
+    chmod 0771 /cache/dalvik-cache
+
+
+# ===============================================================================
 on boot
 # basic network init
     ifup lo
@@ -131,7 +272,7 @@ on boot
     write /sys/devices/virtual/net/rmnet0/timeout_suspend 5000000
 
 # Define the oom_adj values for the classes of processes that can be
-# killed by the kernel.  These are used in ActivityManagerService.
+# killed by the kernel. These are used in ActivityManagerService.
     setprop ro.FOREGROUND_APP_ADJ 0
     setprop ro.VISIBLE_APP_ADJ 1
     setprop ro.PERCEPTIBLE_APP_ADJ 2
@@ -154,6 +295,9 @@ on boot
     setprop ro.HIDDEN_APP_MEM 7168
     setprop ro.EMPTY_APP_MEM 8192
 
+    setprop ro.bt.bdaddr_path "/data/misc/bluetoothd/bt_addr"
+    setprop wifi.interface "eth0"
+
 # Write value must be consistent with the above properties.
 # Note that the driver only supports 6 slots, so we have combined some of
 # the classes into the same memory level; the associated processes of higher
@@ -168,18 +312,8 @@ on boot
     write /proc/1/oom_adj -16
 
     # Tweak background writeout
-    write /proc/sys/vm/dirty_writeback_centisecs 2000
-    write /proc/sys/vm/dirty_expire_centisecs 1000
-    write /proc/sys/vm/dirty_ratio 90
+    write /proc/sys/vm/dirty_expire_centisecs 200
     write /proc/sys/vm/dirty_background_ratio  5
-
-    write /sys/class/block/mmcblk0/queue/iosched/low_latency 0
-    write /sys/class/block/mmcblk1/queue/iosched/low_latency 0
-    write /sys/class/block/stl10/queue/iosched/low_latency 0
-    write /sys/class/block/stl9/queue/iosched/low_latency 0
-
-    # Permissions
-    chmod 666 /system/usr/keychars/s3c-keypad.kcm.bin
 
     # Permissions for System Server and daemons.
     chown radio system /sys/android_power/state
@@ -191,10 +325,6 @@ on boot
     chown radio system /sys/power/wake_lock
     chown radio system /sys/power/wake_unlock
     chown radio system /sys/power/dvfslock_ctrl
-    chown radio system /sys/camera_led_status/led_ril_status
-    chown system system /sys/camera_led_status/led_wimax_status
-    chown system system /sys/camera_led_status/led_hotspot_status
-    chown media system /sys/android_camera/cam_mode
     chmod 0660 /sys/power/state
     chmod 0660 /sys/power/wake_lock
     chmod 0660 /sys/power/wake_unlock
@@ -219,6 +349,7 @@ on boot
     chown root system /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
     chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
 
+
 # Define TCP buffer sizes for various networks
 #   ReadMin, ReadInitial, ReadMax, WriteMin, WriteInitial, WriteMax,
     setprop net.tcp.buffersize.default 4096,87380,110208,4096,16384,110208
@@ -227,12 +358,45 @@ on boot
     setprop net.tcp.buffersize.edge    4093,26280,35040,4096,16384,35040
     setprop net.tcp.buffersize.gprs    4092,8760,11680,4096,8760,11680
 
+# Include extra init file
+    import /system/etc/init.local.rc
+
+    write /sys/class/block/mmcblk0/queue/iosched/low_latency 0
+    write /sys/class/block/mmcblk1/queue/iosched/low_latency 0
+    write /sys/class/block/stl10/queue/iosched/low_latency 0
+    write /sys/class/block/stl9/queue/iosched/low_latency 0
+
+# +++++++++++++++++++++++++++++++++++++++++++
+# for Bluetooth
+    chown bluetooth bluetooth /sys/module/bluetooth_power/parameters/power
+    chown bluetooth bluetooth /proc/bluetooth/sleep/proto
+    chown system system /sys/module/sco/parameters/disable_esco
+    chmod 0660 /sys/module/bluetooth_power/parameters/power
+    chmod 0660 /proc/bluetooth/sleep/proto
+
+    chmod 0777 /sys/class/rfkill/rfkill0/state
+    chmod 0777 /sys/class/rfkill/rfkill1/state
+    chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
+    chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
+    chown bluetooth bluetooth /sys/class/rfkill/rfkill1/type
+    chown bluetooth bluetooth /sys/class/rfkill/rfkill1/state
+
+# Include extra init file
+    import /system/etc/init.local.rc
+
+# Run sysinit
+    exec /system/bin/sysinit
+
     class_start default
 
-## Daemon processes to be run by init.
-##
+# ===============================================================================
+# services
+
 service ueventd /sbin/ueventd
     critical
+
+service console /system/bin/sh
+    console
 
 # adbd is controlled by the persist.service.adb.enable system property
 service adbd /sbin/adbd
@@ -248,3 +412,153 @@ on property:persist.service.adb.enable=1
 on property:persist.service.adb.enable=0
     stop adbd
 
+# Execute files in /system/etc/init.d
+service sysinit /system/bin/logwrapper /system/xbin/busybox run-parts /system/etc/init.d
+    oneshot
+
+# 3D init
+service pvrsrvinit /system/bin/pvrsrvinit
+   user root
+   group root
+   oneshot
+
+service tvout /system/bin/tvoutserver
+     user system
+     group graphics
+
+service servicemanager /system/bin/servicemanager
+    user system
+    critical
+    onrestart restart zygote
+    onrestart restart media
+
+service vold /system/bin/vold
+    socket vold stream 0660 root mount
+    ioprio be 2
+
+service netd /system/bin/netd
+    socket netd stream 0660 root system
+    socket dnsproxyd stream 0660 root inet
+
+# for usb tethering
+service dnsmasq /system/bin/logwrapper /system/bin/dnsmasq -d
+    disabled
+
+service debuggerd /system/bin/debuggerd
+
+service zygote /system/bin/app_process -Xzygote /system/bin --zygote --start-system-server
+    socket zygote stream 666
+    onrestart write /sys/android_power/request_state wake
+    onrestart write /sys/power/state on
+    onrestart restart media
+
+service media /system/bin/mediaserver
+    user media
+    group system audio camera graphics inet net_bt net_bt_admin net_raw
+    ioprio rt 4
+
+#to prevent lockup issue during poweron/off test
+service killmediaserver /system/bin/killmediaserver
+    user media
+    group system
+    oneshot
+#to prevent lockup issue during poweron/off test
+
+service bootanim /system/bin/bootanimation
+    user graphics
+    group graphics
+    disabled
+    oneshot
+
+# wifi
+service wpa_supplicant /system/bin/wpa_supplicant -Dwext -ieth0 -c/data/misc/wifi/wpa_supplicant.conf
+    disabled
+    oneshot
+
+service dhcpcd_eth0 /system/bin/dhcpcd -ABLK eth0
+    disabled
+    oneshot
+
+service iprenew_eth0 /system/bin/dhcpcd -n
+    disabled
+    oneshot
+
+service ifcfg_eth0 /system/bin/ifconfig eth0 up
+    disabled
+    oneshot
+
+#START: BLUETOOTH
+service dbus /system/bin/dbus-daemon --system --nofork
+    socket dbus stream 660 bluetooth bluetooth
+    user root
+    group root net_bt_admin
+
+service hciattach /system/bin/brcm_patchram_plus --enable_hci --pcm_role slave --baudrate 3000000 --patchram /system/bin/BCM4329B1_002.002.023.0534.0590.hcd /dev/s3c2410_serial0
+    user bluetooth
+    group bluetooth net_bt_admin
+    disabled
+
+service bluetoothd /system/bin/logwrapper /system/bin/bluetoothd -n /system/etc/bluetooth/main.conf
+    socket bluetooth stream 660 bluetooth bluetooth
+    socket dbus_bluetooth stream 660 bluetooth bluetooth
+    user root
+    group bluetooth net_bt_admin misc
+    disabled
+
+service hfag /system/bin/sdptool add --channel=10 HFAG
+    user bluetooth
+    group bluetooth net_bt_admin
+    disabled
+    oneshot
+
+service hsag /system/bin/sdptool add --channel=11 HSAG
+    user bluetooth
+    group bluetooth net_bt_admin
+    disabled
+    oneshot
+
+service opush /system/bin/sdptool add --channel=12 OPUSH
+    user bluetooth
+    group bluetooth net_bt_admin
+    disabled
+    oneshot
+
+service pbap /system/bin/sdptool add --channel=19 PBAP
+    user bluetooth
+    group bluetooth net_bt_admin
+    disabled
+    oneshot
+
+#END: BLUETOOTH
+
+service installd /system/bin/installd
+    socket installd stream 600 system system
+
+service racoon /system/bin/racoon
+    socket racoon stream 600 system system
+    # racoon will setuid to vpn after getting necessary resources.
+    group net_admin
+    disabled
+    oneshot
+
+service mtpd /system/bin/mtpd
+    socket mtpd stream 600 system system
+    user vpn
+    group vpn net_admin net_raw
+    disabled
+    oneshot
+
+service keystore /system/bin/keystore /data/misc/keystore
+    user keystore
+    group keystore
+    socket keystore stream 666
+
+service dumpstate /system/bin/dumpstate -s
+    socket dumpstate stream 0660 shell log
+    disabled
+    oneshot
+
+# Clean reboot
+service reboot /system/xbin/shutdown -r
+    disabled
+    oneshot
